--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ h1 {
 .welcome {
   display: flex;
   color: #ffffff;
-  width: 930px;
+  width: 935px;
   height: 43px;
   font-size: 40px;
   line-height: 40px;
@@ -73,13 +73,100 @@ h1 {
   font-size: 20px;
 }
 
+#btn-three, #btn-two {
+  margin: 20px;
+}
+
+.h1-two {
+  font-size: 45px;
+  color: #ffffff;
+  margin-top: 5%;
+}
+
+.welcome-two {
+  display: flex;
+  color: #ffffff;
+  width: 935px;
+  height: 40px;
+  font-size: 30px;
+  line-height: 40px;
+  overflow: hidden;
+  position: absolute;
+}
+
+.ul-two {
+  list-style: none;
+  padding-left: 20px;
+  animation: cambia 9s infinite;
+}
+
+@keyframes cambia {
+  0% {
+    margin-top: 0;
+  }
+  20% {
+    margin-top: 0;
+  }
+  25% {
+    margin-top: -40px;
+  }
+  50% {
+    margin-top: -40px;
+  }
+  55% {
+    margin-top: -80px;
+  }
+  80% {
+    margin-top: -80px;
+  }
+  85% {
+    margin-top: -40px;
+  }
+  95% {
+    margin-top: -40px;
+  }
+  100% {
+    margin-top: 0;
+  }
+}
+.welcome-three {
+  margin: auto;
+  display: table;
+}
+
+.h1-three {
+  position: relative;
+  float: left;
+  color: #ffffff;
+  font-size: 2.5em;
+  background: #1c1c1c;
+  width: 100%;
+  padding: 15px;
+  font-size: 45px;
+  border-radius: 10px;
+}
+
+.h1-three .span-three {
+  background: #1c1c1c;
+  color: #ffffff;
+  position: absolute;
+  right: 0;
+  width: 0;
+  border-left: 1px solid;
+  animation: escribir 5s steps(30) infinite alternate;
+}
+
+@keyframes escribir {
+  0% {
+    width: 100%;
+  }
+  100% {
+    width: 0;
+  }
+}
 nav {
   background: rgba(3, 3, 3, 0.5);
   transition: all 0.5s ease;
-}
-
-nav:hover {
-  background: rgba(240, 241, 244, 0.1);
 }
 
 .nav-item {
@@ -95,57 +182,36 @@ a:hover {
   color: #1c1c1c;
 }
 
-.linea-encabezado {
-  width: 20%;
-  height: 3px;
-  background: #f0f1f4;
-}
-
 .list {
   font-size: 18px;
   color: #1c1c1c;
 }
 
-.title-name {
-  margin: auto;
-  padding: 15px 5px 5px 1px;
-  width: 10%;
-  background: #e23744;
-  text-align: center;
-  color: #ffffff;
-  font-size: 20px;
-}
-
-.text1 {
-  color: #1c1c1c;
-  font-size: 14px;
-  width: 50%;
-  padding: 20px 0px 0px 0px;
-  margin: auto;
-}
-
 .containers {
   display: flex;
   justify-content: center;
-  padding: 0px 70px 20px 90px;
+  padding: 58px 0px 0px 0px;
 }
 
 .container {
-  width: 30%;
+  width: 33%;
   font-family: Helvetica, Arial, Sans-serif;
 }
 
+.container-one {
+  margin-left: 25%;
+}
+
 .photo {
-  width: 200px;
-  height: 200px;
+  width: 130px;
+  height: 130px;
   border-radius: 100%;
   border: 1px solid #f0f1f4;
-  margin-bottom: 20px;
 }
 
 .h1 {
   color: #1c1c1c;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .buttons {
@@ -178,7 +244,7 @@ a:hover {
   height: auto;
 }
 
-.title-work, .title-contact {
+.title-work {
   margin: auto;
   padding: 15px 5px 5px 1px;
   width: 15%;
@@ -188,14 +254,11 @@ a:hover {
   font-size: 20px;
 }
 
-.title-contact {
-  background: #1c1c1c;
-}
-
 .container-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding: 55px;
 }
 
 .card {
@@ -286,17 +349,16 @@ a:hover {
 .container-contact {
   display: flex;
   justify-content: center;
+  padding: 55px;
 }
 
 .contact-image {
   margin-top: 50px;
-  margin: 10px;
-  width: 50%;
+  width: 30%;
   text-align: center;
 }
 
 .contact-title {
-  margin-top: 200px;
   text-align: center;
   font-size: 18px;
 }
@@ -309,6 +371,9 @@ a:hover {
 footer {
   background: #1c1c1c;
   color: #ffffff;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
