--- a/src/style.css
+++ b/src/style.css
@@ -1,410 +1,423 @@
-.home {
-  background: #1c1c1c;
-}
+@media screen and (min-width: 300px) {
+  .home {
+    background: #1c1c1c;
+  }
 
-.imagen {
-  width: 100%;
-  height: 625px;
-  opacity: 0.5;
-}
-
-.carousel-caption {
-  top: 150px;
-  text-align: left;
-}
-
-h1 {
-  font-size: 25px;
-  color: #ffffff;
-}
-
-.welcome {
-  display: flex;
-  color: #ffffff;
-  width: 935px;
-  height: 43px;
-  font-size: 40px;
-  line-height: 40px;
-  overflow: hidden;
-  position: absolute;
-}
-
-.ul {
-  list-style: none;
-  padding-left: 18px;
-  animation: cambiar 7s infinite;
-}
-
-@keyframes cambiar {
-  0% {
-    margin-top: 0;
-  }
-  20% {
-    margin-top: 0;
-  }
-  25% {
-    margin-top: -42px;
-  }
-  50% {
-    margin-top: -42px;
-  }
-  55% {
-    margin-top: -82px;
-  }
-  80% {
-    margin-top: -82px;
-  }
-  85% {
-    margin-top: -42px;
-  }
-  95% {
-    margin-top: -42px;
-  }
-  100% {
-    margin-top: 0;
-  }
-}
-.btn {
-  margin-top: 80px;
-  font-size: 20px;
-}
-
-#btn-three, #btn-two {
-  margin: 20px;
-}
-
-.h1-two {
-  font-size: 45px;
-  color: #ffffff;
-  margin-top: 5%;
-}
-
-.welcome-two {
-  display: flex;
-  color: #ffffff;
-  width: 935px;
-  height: 40px;
-  font-size: 30px;
-  line-height: 40px;
-  overflow: hidden;
-  position: absolute;
-}
-
-.ul-two {
-  list-style: none;
-  padding-left: 20px;
-  animation: cambia 9s infinite;
-}
-
-@keyframes cambia {
-  0% {
-    margin-top: 0;
-  }
-  20% {
-    margin-top: 0;
-  }
-  25% {
-    margin-top: -40px;
-  }
-  50% {
-    margin-top: -40px;
-  }
-  55% {
-    margin-top: -80px;
-  }
-  80% {
-    margin-top: -80px;
-  }
-  85% {
-    margin-top: -40px;
-  }
-  95% {
-    margin-top: -40px;
-  }
-  100% {
-    margin-top: 0;
-  }
-}
-.welcome-three {
-  margin: auto;
-  display: table;
-}
-
-.h1-three {
-  position: relative;
-  float: left;
-  color: #ffffff;
-  font-size: 2.5em;
-  width: 100%;
-  padding: 15px;
-  font-size: 45px;
-}
-
-.carousel-indicators {
-  display: none;
-}
-
-.span-three {
-  background: #ffffff;
-  color: #ffffff;
-  position: absolute;
-  right: 0;
-  width: 0;
-  border-left: 1px solid;
-  border-radius: 15px;
-  animation: escribir 5s steps(30) infinite alternate;
-}
-
-@keyframes escribir {
-  0% {
+  .imagen {
     width: 100%;
+    height: 625px;
+    opacity: 0.5;
   }
-  100% {
+
+  .carousel-caption {
+    top: 150px;
+    text-align: left;
+  }
+
+  h1 {
+    font-size: 25px;
+    color: #ffffff;
+  }
+
+  .welcome {
+    display: flex;
+    color: #ffffff;
+    width: 935px;
+    height: 43px;
+    font-size: 40px;
+    line-height: 40px;
+    overflow: hidden;
+  }
+
+  .ul {
+    list-style: none;
+    padding-left: 2%;
+    animation: cambiar 7s infinite;
+  }
+
+  @keyframes cambiar {
+    0% {
+      margin-top: 0;
+    }
+    20% {
+      margin-top: 0;
+    }
+    25% {
+      margin-top: -42px;
+    }
+    50% {
+      margin-top: -42px;
+    }
+    55% {
+      margin-top: -82px;
+    }
+    80% {
+      margin-top: -82px;
+    }
+    85% {
+      margin-top: -42px;
+    }
+    95% {
+      margin-top: -42px;
+    }
+    100% {
+      margin-top: 0;
+    }
+  }
+  .btn {
+    margin-top: 80px;
+    font-size: 20px;
+  }
+
+  #btn-three, #btn-two {
+    margin: 20px;
+  }
+
+  .h1-two {
+    font-size: 45px;
+    color: #ffffff;
+    margin-top: 5%;
+  }
+
+  .welcome-two {
+    display: flex;
+    color: #ffffff;
+    width: 935px;
+    height: 40px;
+    font-size: 30px;
+    line-height: 40px;
+    overflow: hidden;
+    position: absolute;
+  }
+
+  .ul-two {
+    list-style: none;
+    padding-left: 20px;
+    animation: cambia 9s infinite;
+  }
+
+  @keyframes cambia {
+    0% {
+      margin-top: 0;
+    }
+    20% {
+      margin-top: 0;
+    }
+    25% {
+      margin-top: -40px;
+    }
+    50% {
+      margin-top: -40px;
+    }
+    55% {
+      margin-top: -80px;
+    }
+    80% {
+      margin-top: -80px;
+    }
+    85% {
+      margin-top: -40px;
+    }
+    95% {
+      margin-top: -40px;
+    }
+    100% {
+      margin-top: 0;
+    }
+  }
+  .welcome-three {
+    margin: auto;
+    display: table;
+  }
+
+  .h1-three {
+    position: relative;
+    float: left;
+    color: #ffffff;
+    font-size: 2.5em;
+    width: 100%;
+    padding: 15px;
+    font-size: 45px;
+  }
+
+  .carousel-indicators {
+    display: none;
+  }
+
+  .span-three {
+    background: #ffffff;
+    color: #ffffff;
+    position: absolute;
+    right: 0;
     width: 0;
+    border-left: 1px solid;
+    border-radius: 15px;
+    animation: escribir 5s steps(30) infinite alternate;
   }
-}
-nav {
-  background: rgba(3, 3, 3, 0.9);
-  transition: all 0.9s ease;
-}
 
-nav:active {
-  background: #f0f1f4;
-}
+  @keyframes escribir {
+    0% {
+      width: 100%;
+    }
+    100% {
+      width: 0;
+    }
+  }
+  nav {
+    background: rgba(3, 3, 3, 0.7);
+    transition: all 0.9s ease;
+  }
 
-.nav-item {
-  font-size: 18px;
-  padding: 0px 30px;
-}
+  nav:active {
+    background: #f0f1f4;
+  }
 
-a {
-  color: #ffffff;
-  font-family: Helvetica;
-}
+  .nav-item {
+    font-size: 18px;
+    padding: 0px 30px;
+  }
 
-a:hover {
-  color: #e23744;
-}
+  a {
+    color: #ffffff;
+    font-family: Helvetica;
+  }
 
-.list {
-  font-size: 16px;
-  color: #1c1c1c;
-}
+  a:hover {
+    color: #e23744;
+  }
 
-.containers {
-  background: #ffffff;
-  display: flex;
-  justify-content: center;
-  padding: 65px 0px 0px 0px;
-}
+  .list {
+    font-size: 16px;
+    color: #1c1c1c;
+  }
 
-.container {
-  width: 33%;
-  font-family: arial narrow;
-  font-size: 16px;
-}
+  .containers {
+    background: #ffffff;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 75px;
+  }
 
-.container-one {
-  margin-left: 20%;
-}
+  .container {
+    width: 410px;
+    height: 550px;
+    font-family: arial narrow;
+    font-size: 17px;
+  }
 
-.photo {
-  width: 130px;
-  height: 130px;
-  border-radius: 100%;
-  border: 1px solid #f0f1f4;
-}
+  .photo {
+    width: 150px;
+    height: 140px;
+    border-radius: 100%;
+    border: 1px solid #f0f1f4;
+    margin-left: 30%;
+  }
 
-.h1 {
-  font-family: Helvetica;
-  width: 50%;
-  color: #e23744;
-  font-size: 18px;
-}
+  .h1 {
+    font-family: Helvetica;
+    width: 50%;
+    color: #e23744;
+    font-size: 18px;
+    text-align: center;
+  }
 
-.buttons {
-  display: none;
-}
+  .buttons {
+    display: none;
+  }
 
-.list {
-  list-style: none;
-}
+  .list {
+    list-style: none;
+    margin-left: 20%;
+  }
 
-.title {
-  width: 300px;
-  padding: 7px;
-  background: #e23744;
-  color: #ffffff;
-  border-bottom: 1px solid #e23744;
-  display: block;
-  cursor: pointer;
-}
+  .title {
+    width: 300px;
+    padding: 7px;
+    background: #e23744;
+    color: #ffffff;
+    border-bottom: 1px solid #e23744;
+    display: block;
+    cursor: pointer;
+  }
 
-.title:hover {
-  background: #ffffff;
-  color: #e23744;
-}
+  .title:hover {
+    background: #ffffff;
+    color: #e23744;
+  }
 
-.content {
-  height: 0;
-  overflow: hidden;
-  transition: all 0.5s;
-  margin: 0;
-}
+  .content {
+    height: 0;
+    overflow: hidden;
+    transition: all 0.5s;
+    margin: 0;
+  }
 
-.buttons:checked ~ .content {
-  height: auto;
-}
+  .buttons:checked ~ .content {
+    height: auto;
+  }
 
-.title-work {
-  margin: auto;
-  padding: 15px 5px 5px 1px;
-  width: 15%;
-  background: #f5a623;
-  text-align: center;
-  color: #ffffff;
-  font-size: 20px;
-}
+  .title-work {
+    margin: auto;
+    padding: 15px 5px 5px 1px;
+    width: 15%;
+    background: #f5a623;
+    text-align: center;
+    color: #ffffff;
+    font-size: 20px;
+  }
 
-.container-cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 60px;
-}
+  .container-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 60px;
+  }
 
-.card {
-  width: 375px;
-  height: 240px;
-  background: #000;
-  margin: 5px;
-}
+  .card {
+    width: 375px;
+    height: 240px;
+    background: #000;
+    margin: 5px;
+  }
 
-.image {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
+  .image {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
 
-.card-imagen {
-  width: 100%;
-  height: 100%;
-  transition: 0.5s;
-}
+  .card-imagen {
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+  }
 
-.card:hover .card-imagen {
-  opacity: 0.5;
-  transform: translateX(30%);
-}
+  .card:hover .card-imagen {
+    opacity: 0.5;
+    transform: translateX(30%);
+  }
 
-.details {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 90%;
-  height: 100%;
-  background: #f5a623;
-  transition: 0.5s;
-  transform-origin: left;
-  transform: perspective(2000px) rotateY(-90deg);
-}
+  .details {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 90%;
+    height: 100%;
+    background: #e23744;
+    transition: 0.5s;
+    transform-origin: left;
+    transform: perspective(2000px) rotateY(-90deg);
+  }
 
-.card:hover .details {
-  transform: perspective(2000px) rotateY(0deg);
-}
+  .card:hover .details {
+    transform: perspective(2000px) rotateY(0deg);
+  }
 
-.center {
-  padding: 40px;
-  text-align: center;
-  background: #fff;
-  position: absolute;
-  top: 50%;
-  font-family: arial narrow;
-  transform: translateY(-50%);
-}
+  .center {
+    padding: 40px;
+    text-align: center;
+    background: #fff;
+    position: absolute;
+    top: 50%;
+    font-family: arial narrow;
+    transform: translateY(-50%);
+  }
 
-.card-title {
-  margin: 0;
-  padding: 0;
-  color: #ff3636;
-  line-height: 20px;
-  font-size: 20px;
-  text-transform: uppercase;
-}
+  .card-title {
+    margin: 0;
+    padding: 0;
+    color: #ff3636;
+    line-height: 20px;
+    font-size: 20px;
+    text-transform: uppercase;
+  }
 
-.card-span {
-  font-size: 14px;
-  color: #262626;
-}
+  .card-span {
+    font-size: 14px;
+    color: #262626;
+  }
 
--card-text {
-  margin: 10px 0;
-  padding: 0;
-  color: #262626;
-}
+  .card-text {
+    margin: 10px 0;
+    padding: 0;
+    color: #262626;
+  }
 
-.card-list {
-  margin: 10px auto 0;
-  padding: 0;
-  display: table;
-}
+  .card-list {
+    margin: 10px auto 0;
+    padding: 0;
+    display: table;
+  }
 
-.card-li {
-  list-style: none;
-  margin: 0 10px;
-  float: left;
-}
+  .card-li {
+    list-style: none;
+    margin: 0 10px;
+    float: left;
+  }
 
-#btn {
-  font-size: 12px;
-  margin: 0;
-}
+  #btn {
+    font-size: 12px;
+    margin: 0;
+  }
 
-.contact {
-  background: #f0f1f4;
-  width: 100%;
-  height: 625px;
-  font-family: arial narrow;
-  font-size: 22px;
-}
+  .contact {
+    background: #ffffff;
+    width: 100%;
+    height: 625px;
+    font-family: arial narrow;
+    font-size: 22px;
+  }
 
-.container-contact {
-  display: flex;
-  justify-content: center;
-  padding: 55px;
-}
+  .container-contact {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 100px;
+  }
 
-.contact-image {
-  margin-top: 50px;
-  width: 30%;
-  text-align: center;
-}
+  .contact-image {
+    width: 300px;
+    height: 150px;
+    margin: 50px;
+    text-align: center;
+    font-family: Helvetica;
+  }
 
-.contact-title {
-  text-align: center;
-}
+  .contact-title {
+    text-align: center;
+    color: #1c1c1c;
+    font-family: Helvetica;
+  }
 
-.contact-list {
-  text-align: center;
-  padding: 20px;
-}
+  .contact-list {
+    text-align: center;
+    padding: 20px;
+    margin-bottom: 100px;
+  }
 
-.list-img {
-  width: 3.5%;
-  margin: 10px;
-}
+  .list-img {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+  }
 
-.list-img:hover {
-  background: #f5a623;
-  border-radius: 50%;
-}
+  .list-img:hover {
+    background: #f5a623;
+    border-radius: 50%;
+  }
 
-footer {
-  background: rgba(3, 3, 3, 0.9);
-  color: #ffffff;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  footer {
+    color: #1c1c1c;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    font-family: Helvetica;
+  }
+
+  .footer-copyright {
+    color: #ffffff;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
