--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @media screen and (min-width: 300px) {
   .home {
     background: #1c1c1c;
@@ -5,33 +6,45 @@
 
   .imagen {
     width: 100%;
-    height: 625px;
+    height: 100vh;
     opacity: 0.5;
   }
 
   .carousel-caption {
-    top: 150px;
+    top: 35%;
     text-align: left;
   }
 
   h1 {
-    font-size: 25px;
+    font-size: 48px;
     color: #ffffff;
+  }
+
+  #sobre-mí {
+    background: #e23744;
+    color: white;
+    margin: 20px;
+  }
+
+  #descargar-cv {
+    background: #f5a623;
+    color: white;
+    margin: 20px;
   }
 
   .welcome {
     display: flex;
     color: #ffffff;
-    width: 935px;
-    height: 43px;
-    font-size: 40px;
+    width: 945px;
+    height: 40px;
+    font-size: 32px;
     line-height: 40px;
     overflow: hidden;
   }
 
   .ul {
     list-style: none;
-    padding-left: 2%;
+    padding-left: 20px;
     animation: cambiar 7s infinite;
   }
 
@@ -43,22 +56,22 @@
       margin-top: 0;
     }
     25% {
-      margin-top: -42px;
+      margin-top: -41px;
     }
     50% {
-      margin-top: -42px;
+      margin-top: -41px;
     }
     55% {
-      margin-top: -82px;
+      margin-top: -81px;
     }
     80% {
-      margin-top: -82px;
+      margin-top: -81px;
     }
     85% {
-      margin-top: -42px;
+      margin-top: -41px;
     }
     95% {
-      margin-top: -42px;
+      margin-top: -41px;
     }
     100% {
       margin-top: 0;
@@ -69,8 +82,10 @@
     font-size: 20px;
   }
 
-  #btn-three, #btn-two {
+  #btn-two {
     margin: 20px;
+    background: #f5a623;
+    color: white;
   }
 
   .h1-two {
@@ -164,12 +179,8 @@
     }
   }
   nav {
-    background: rgba(3, 3, 3, 0.7);
+    background: rgba(3, 3, 3, 0.9);
     transition: all 0.9s ease;
-  }
-
-  nav:active {
-    background: #f0f1f4;
   }
 
   .nav-item {
@@ -183,7 +194,11 @@
   }
 
   a:hover {
-    color: #e23744;
+    color: #f5a623;
+  }
+
+  a:focus {
+    color: #f5a623;
   }
 
   .list {
@@ -196,30 +211,36 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 75px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   .container {
     width: 410px;
-    height: 550px;
-    font-family: arial narrow;
-    font-size: 17px;
+    height: 380px;
+    font-family: Helvetica;
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 10%;
+  }
+
+  .pt {
+    text-align: center;
+    margin-top: 5%;
   }
 
   .photo {
-    width: 150px;
-    height: 140px;
-    border-radius: 100%;
-    border: 1px solid #f0f1f4;
-    margin-left: 30%;
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    border-radius-border: 1px solid #f0f1f4;
+    border-radius-margin: auto;
   }
 
   .h1 {
     font-family: Helvetica;
-    width: 50%;
     color: #e23744;
     font-size: 18px;
-    text-align: center;
   }
 
   .buttons {
@@ -267,18 +288,50 @@
     font-size: 20px;
   }
 
+  .container-skill {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .skill {
+    margin-top: 6%;
+    width: 500px;
+    height: 400px;
+    font-family: Helvetica;
+    font-size: 16px;
+    margin-left: 10px;
+    margin-bottom: 8%;
+  }
+
+  .h1-skill {
+    text-align: center;
+    font-family: Helvetica;
+    color: #e23744;
+    font-size: 18px;
+  }
+
+  .list {
+    margin-left: 0px;
+    margin-right: 10px;
+  }
+
   .container-cards {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 60px;
+    margin-top: 5%;
+    margin-left: -10px;
+    margin-right: 30px;
+    margin-bottom: 5%;
   }
 
   .card {
-    width: 375px;
-    height: 240px;
+    width: 43%;
+    height: 320px;
     background: #000;
-    margin: 5px;
+    margin-left: 40px;
+    margin-top: 10px;
   }
 
   .image {
@@ -304,7 +357,7 @@
     left: 0;
     width: 90%;
     height: 100%;
-    background: #e23744;
+    background: white;
     transition: 0.5s;
     transform-origin: left;
     transform: perspective(2000px) rotateY(-90deg);
@@ -315,12 +368,12 @@
   }
 
   .center {
-    padding: 40px;
+    padding: 20px;
     text-align: center;
     background: #fff;
     position: absolute;
     top: 50%;
-    font-family: arial narrow;
+    font-family: Helvetica;
     transform: translateY(-50%);
   }
 
@@ -334,7 +387,7 @@
   }
 
   .card-span {
-    font-size: 14px;
+    font-size: 12px;
     color: #262626;
   }
 
@@ -342,6 +395,8 @@
     margin: 10px 0;
     padding: 0;
     color: #262626;
+    font-size: 13px;
+    font-family: Helvetica;
   }
 
   .card-list {
@@ -359,14 +414,24 @@
   #btn {
     font-size: 12px;
     margin: 0;
+    background: #f5a623;
+    color: #ffffff;
+    font-size: 16px;
+  }
+
+  #btn-web {
+    font-size: 12px;
+    margin: 0;
+    background: #f0f1f4;
+    color: #1c1c1c;
+    font-size: 16px;
   }
 
   .contact {
     background: #ffffff;
     width: 100%;
     height: 625px;
-    font-family: arial narrow;
-    font-size: 22px;
+    font-family: Helvetica;
   }
 
   .container-contact {
@@ -374,6 +439,10 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 100px;
+  }
+
+  .number {
+    font-size: 25px;
   }
 
   .contact-image {
@@ -388,6 +457,7 @@
     text-align: center;
     color: #1c1c1c;
     font-family: Helvetica;
+    font-size: 33px;
   }
 
   .contact-list {
@@ -397,22 +467,18 @@
   }
 
   .list-img {
-    width: 50px;
-    height: 50px;
     margin: 10px;
-  }
-
-  .list-img:hover {
-    background: #f5a623;
-    border-radius: 50%;
   }
 
   footer {
     color: #1c1c1c;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     font-family: Helvetica;
+    background: rgba(3, 3, 3, 0.9);
+    z-index: 1;
+    position: fixed;
   }
 
   .footer-copyright {
