--- a/src/style.sass
+++ b/src/style.sass
@@ -14,29 +14,41 @@ $yellow: #f5a623
 
                               .imagen
                                 width: 100%
-                                height: 625px
+                                height: 100vh
                                 opacity: 0.5
 
                               .carousel-caption
-                                top: 150px
+                                top: 35%
                                 text-align: left
                 
                               h1
-                                font-size: 25px
+                                font-size: 48px
                                 color: $white
+
+                              #sobre-mí
+                                background: $rosa
+                                color: white
+                                margin: 20px
+
+
+                              #descargar-cv
+                                background: $yellow
+                                color: white
+                                margin: 20px
+
 
                               .welcome
                                 display: flex
                                 color: $white
-                                width: 935px
-                                height: 43px
-                                font-size: 40px
+                                width: 945px
+                                height: 40px
+                                font-size: 32px
                                 line-height: 40px
                                 overflow: hidden
 
                               .ul 
                                 list-style: none
-                                padding-left: 2%
+                                padding-left: 20px
                                 animation: cambiar 7s infinite
 
                               @keyframes cambiar
@@ -45,17 +57,17 @@ $yellow: #f5a623
                                 20% 
                                   margin-top: 0
                                 25% 
-                                  margin-top: -42px
+                                  margin-top: -41px
                                 50% 
-                                  margin-top: -42px
+                                  margin-top: -41px
                                 55% 
-                                  margin-top: -82px
+                                  margin-top: -81px
                                 80% 
-                                  margin-top: -82px
-                                85% 
-                                  margin-top: -42px
+                                  margin-top: -81px
+                                85%
+                                  margin-top: -41px
                                 95% 
-                                  margin-top: -42px
+                                  margin-top: -41px
                                 100% 
                                   margin-top: 0
   
@@ -63,8 +75,10 @@ $yellow: #f5a623
                                 margin-top: 80px
                                 font-size: 20px
 
-                              #btn-three, #btn-two
+                              #btn-two 
                                 margin: 20px
+                                background: $yellow
+                                color: white
 
                               .h1-two
                                 font-size: 45px
@@ -140,11 +154,8 @@ $yellow: #f5a623
                                  width: 0 
      
                               nav
-                                background: rgb(3, 3, 3, 0.7) 
+                                background: rgb(3, 3, 3, 0.9) 
                                 transition: all 0.9s ease
-
-                              nav:active
-                                background: $gray
 
                               .nav-item
                                 font-size: 18px
@@ -152,9 +163,12 @@ $yellow: #f5a623
                               a
                                 color: $white
                                 font-family: $helvetica
-
+                              
                               a:hover
-                                color: $rosa
+                                color: $yellow
+
+                              a:focus
+                                color: $yellow
       
                               .list
                                 font-size: 16px
@@ -166,27 +180,33 @@ $yellow: #f5a623
                                 display: flex
                                 flex-wrap: wrap
                                 justify-content: center 
-                                margin-top: 75px
+                                margin-left: 20px
+                                margin-right: 20px
+
 
                               .container
                                 width: 410px
-                                height: 550px
-                                font-family: $arialNarrow
-                                font-size: 17px
+                                height: 380px
+                                font-family: $helvetica
+                                font-size: 16px
+                                margin-top: 10px
+                                margin-bottom: 10%
                                 
-                              .photo
-                                width: 150px
-                                height: 140px
-                                border-radius: 100%
-                                border:1px solid $gray
-                                margin-left: 30%
+                              .pt 
+                                text-align: center
+                                margin-top: 5%
 
+                              .photo
+                               width: 200px
+                               height:200px
+                               border-radius:10px
+                                border:1px solid $gray
+                                margin: auto
+                            
                               .h1
                                 font-family: $helvetica
-                                width: 50%
                                 color: $rosa
                                 font-size: 18px
-                                text-align: center
 
                               .buttons
                                 display: none
@@ -204,7 +224,7 @@ $yellow: #f5a623
                                 display: block
                                 cursor: pointer
 
-                              .title:hover 
+                              .title:hover
                                 background: $white
                                 color: $rosa      
 
@@ -226,18 +246,46 @@ $yellow: #f5a623
                                 text-align: center
                                 color: $white
                                 font-size: 20px
- 
+
+                              .container-skill
+                                display: flex
+                                flex-wrap: wrap
+                                justify-content: center 
+
+                              .skill
+                                margin-top: 6%
+                                width: 500px
+                                height: 400px
+                                font-family: $helvetica
+                                font-size: 16px
+                                margin-left: 10px
+                                margin-bottom: 8%
+
+                              .h1-skill
+                                text-align: center  
+                                font-family: $helvetica
+                                color: $rosa
+                                font-size: 18px    
+
+                              .list
+                                margin-left: 0px
+                                margin-right: 10px
+
                               .container-cards
                                 display: flex
                                 flex-wrap: wrap
                                 justify-content: center  
-                                padding: 60px   
+                                margin-top: 5%
+                                margin-left: -10px
+                                margin-right: 30px
+                                margin-bottom: 5%
 
                               .card 
-                                width: 375px
-                                height: 240px
+                                width: 43%
+                                height: 320px
                                 background: #000
-                                margin: 5px
+                                margin-left: 40px
+                                margin-top: 10px
 
                               .image
                                 width: 100%
@@ -259,7 +307,7 @@ $yellow: #f5a623
                                 left: 0
                                 width: 90%
                                 height: 100%
-                                background: $rosa
+                                background: white
                                 transition: .5s
                                 transform-origin: left
                                 transform: perspective(2000px) rotateY(-90deg)
@@ -268,12 +316,12 @@ $yellow: #f5a623
                                 transform: perspective(2000px) rotateY(0deg)
 
                               .center 
-                                padding: 40px
+                                padding: 20px
                                 text-align: center
                                 background: #fff
                                 position: absolute
                                 top: 50%
-                                font-family: $arialNarrow
+                                font-family: $helvetica
                                 transform: translateY(-50%)
 
                               .card-title
@@ -285,15 +333,15 @@ $yellow: #f5a623
                                 text-transform: uppercase
 
                               .card-span 
-                                font-size: 14px
+                                font-size: 12px
                                 color: #262626
 
                               .card-text
                                 margin: 10px 0
                                 padding: 0
                                 color: #262626
-
-
+                                font-size: 13px
+                                font-family: $helvetica
 
                               .card-list
                                 margin: 10px auto 0
@@ -308,13 +356,23 @@ $yellow: #f5a623
                               #btn
                                 font-size: 12px
                                 margin: 0
+                                background: $yellow
+                                color: $white
+                                font-size: 16px
+
+            
+                              #btn-web
+                                font-size: 12px
+                                margin: 0
+                                background: $gray
+                                color: $black
+                                font-size: 16px
 
                               .contact
                                 background: $white
                                 width: 100%
                                 height: 625px
-                                font-family: $arialNarrow
-                                font-size: 22px
+                                font-family: $helvetica
 
                               .container-contact
                                 display: flex
@@ -322,6 +380,8 @@ $yellow: #f5a623
                                 justify-content: center
                                 margin-top: 100px
 
+                              .number
+                                font-size: 25px
 
                               .contact-image
                                 width: 300px
@@ -330,33 +390,29 @@ $yellow: #f5a623
                                 text-align: center
                                 font-family: $helvetica 
 
-
                               .contact-title
                                 text-align: center
                                 color: $black
                                 font-family: $helvetica 
+                                font-size: 33px
 
                               .contact-list
                                 text-align: center
                                 padding: 20px
                                 margin-bottom: 100px
 
-
                               .list-img
-                                width: 50px
-                                height: 50px
                                 margin: 10px
-
-                              .list-img:hover
-                                background: $yellow
-                                border-radius: 50%
 
                               footer
                                 color: $black
-                                position: absolute
+                                position: relative
                                 bottom: 0
                                 width: 100%
                                 font-family: $helvetica
+                                background: rgb(3, 3, 3, 0.9)
+                                z-index: 1
+                                position: fixed
 
                               .footer-copyright
                                 color: $white
