corrigiendo en sobre mi

--- a/src/style.sass
+++ b/src/style.sass
@@ -265,7 +265,7 @@ $yellow: #f5a623
                                 text-align: center  
                                 font-family: $helvetica
                                 color: $rosa
-                                font-size: 18px    
+                                font-size: 20px    
 
                               .list
                                 margin-left: 0px
@@ -416,4 +416,8 @@ $yellow: #f5a623
 
                               .footer-copyright
                                 color: $white
+
+                              .list li i 
+                                width: 30px
+                                height: 30px
 
