--- a/src/style.css
+++ b/src/style.css
@@ -308,7 +308,7 @@
     text-align: center;
     font-family: Helvetica;
     color: #e23744;
-    font-size: 18px;
+    font-size: 20px;
   }
 
   .list {
@@ -483,6 +483,11 @@
 
   .footer-copyright {
     color: #ffffff;
+  }
+
+  .list li i {
+    width: 30px;
+    height: 30px;
   }
 }
 
