agregado un proyecto

--- a/src/style.css
+++ b/src/style.css
@@ -489,6 +489,20 @@
     width: 30px;
     height: 30px;
   }
+
+  .link {
+    color: black;
+    margin: 5px;
+  }
+
+  .link:hover {
+    color: #e23744;
+  }
+
+  .link-repo {
+    color: #f5a623;
+    margin: 5px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
