--- a/src/style.sass
+++ b/src/style.sass
@@ -420,4 +420,14 @@ $yellow: #f5a623
                               .list li i 
                                 width: 30px
                                 height: 30px
+                              
+                              .link
+                               color: black
+                               margin: 5px
 
+                              .link:hover 
+                               color: $rosa
+
+                              .link-repo
+                               color: $yellow
+                               margin: 5px
