--- a/src/style.sass
+++ b/src/style.sass
@@ -417,9 +417,8 @@ $yellow: #f5a623
                               .footer-copyright
                                 color: $white
 
-                              .list li i 
-                                width: 30px
-                                height: 30px
+                              .list img
+                                margin: 5px
                               
                               .link
                                color: black
