--- a/src/style.sass
+++ b/src/style.sass
@@ -191,6 +191,9 @@ $yellow: #f5a623
                                 font-size: 16px
                                 margin-top: 10px
                                 margin-bottom: 10%
+                                background: #F7F2F7  
+                                border: solid 1px #F7F2F7 
+                                padding: 10px 10px 10px 10px
                                 
                               .pt 
                                 text-align: center
@@ -213,7 +216,8 @@ $yellow: #f5a623
 
                               .list
                                 list-style: none
-                                margin-left: 20%
+                                margin-left: 40%
+                              
 
                               .title
                                 width: 300px
@@ -248,18 +252,15 @@ $yellow: #f5a623
                                 font-size: 20px
 
                               .container-skill
-                                display: flex
-                                flex-wrap: wrap
-                                justify-content: center 
 
                               .skill
-                                margin-top: 6%
-                                width: 500px
-                                height: 400px
+                                margin-top: 5%
                                 font-family: $helvetica
                                 font-size: 16px
                                 margin-left: 10px
-                                margin-bottom: 8%
+                                width: 1200px
+                                margin-bottom: 5%
+
 
                               .h1-skill
                                 text-align: center  
@@ -270,6 +271,19 @@ $yellow: #f5a623
                               .list
                                 margin-left: 0px
                                 margin-right: 10px
+                                display: flex
+                                flex-wrap: wrap
+                                justify-content: center  
+
+                              .list li 
+                               margin: 5px
+                               background: #F7F2F7
+                               width: 17%
+                               height: 15vh
+                               text-align: center
+                               padding: 10px 10px 10px 10px
+                               
+
 
                               .container-cards
                                 display: flex
@@ -416,9 +430,6 @@ $yellow: #f5a623
 
                               .footer-copyright
                                 color: $white
-
-                              .list img
-                                margin: 5px
                               
                               .link
                                color: black
