--- a/src/style.sass
+++ b/src/style.sass
@@ -194,6 +194,7 @@ $yellow: #f5a623
                                 background: #F7F2F7  
                                 border: solid 1px #F7F2F7 
                                 padding: 10px 10px 10px 10px
+                                border-radius: 5px
                                 
                               .pt 
                                 text-align: center
@@ -275,6 +276,10 @@ $yellow: #f5a623
                                 flex-wrap: wrap
                                 justify-content: center  
 
+                              .list img 
+                                display: block
+                                margin: auto
+
                               .list li 
                                margin: 5px
                                background: #F7F2F7
@@ -282,6 +287,7 @@ $yellow: #f5a623
                                height: 15vh
                                text-align: center
                                padding: 10px 10px 10px 10px
+                               border-radius: 5px
                                
 
 
@@ -295,11 +301,12 @@ $yellow: #f5a623
                                 margin-bottom: 5%
 
                               .card 
-                                width: 43%
-                                height: 320px
+                                width: 45%
+                                height: 310px
                                 background: #000
                                 margin-left: 40px
                                 margin-top: 10px
+                                border-radius: 5px
 
                               .image
                                 width: 100%
@@ -337,6 +344,7 @@ $yellow: #f5a623
                                 top: 50%
                                 font-family: $helvetica
                                 transform: translateY(-50%)
+                                border-radius: 5px
 
                               .card-title
                                 margin: 0
@@ -398,11 +406,15 @@ $yellow: #f5a623
                                 font-size: 25px
 
                               .contact-image
-                                width: 300px
+                                width: 420px
                                 height: 150px
                                 margin: 50px
+                                padding: 20px
                                 text-align: center
-                                font-family: $helvetica 
+                                font-family: $helvetica
+                                background: #F7F2F7
+                                border-radius: 5px
+
 
                               .contact-title
                                 text-align: center
@@ -414,6 +426,7 @@ $yellow: #f5a623
                                 text-align: center
                                 padding: 20px
                                 margin-bottom: 100px
+
 
                               .list-img
                                 margin: 10px
