agregando retos a proyectos

--- a/src/style.css
+++ b/src/style.css
@@ -292,6 +292,11 @@
     font-size: 20px;
   }
 
+  .container-skill {
+    margin-right: 5%;
+    margin-left: 5%;
+  }
+
   .skill {
     margin-top: 5%;
     font-family: Helvetica;
@@ -342,12 +347,13 @@
   }
 
   .card {
-    width: 45%;
-    height: 310px;
+    width: 85vh;
+    height: 60vh;
     background: #000;
     margin-left: 40px;
     margin-top: 10px;
     border-radius: 5px;
+    border: 2px solid #f5a623;
   }
 
   .image {
@@ -455,7 +461,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 100px;
+    margin-top: 80px;
   }
 
   .number {
