--- a/src/style.sass
+++ b/src/style.sass
@@ -253,6 +253,9 @@ $yellow: #f5a623
                                 font-size: 20px
 
                               .container-skill
+                                margin-right: 5%
+                                margin-left: 5%
+                      
 
                               .skill
                                 margin-top: 5%
@@ -301,12 +304,13 @@ $yellow: #f5a623
                                 margin-bottom: 5%
 
                               .card 
-                                width: 45%
-                                height: 310px
+                                width: 85vh
+                                height: 60vh
                                 background: #000
                                 margin-left: 40px
                                 margin-top: 10px
                                 border-radius: 5px
+                                border: 2px solid $yellow
 
                               .image
                                 width: 100%
